# benchmark-sca

./: .gitignore  .syft.yaml  CMakeLists.txt  README.md  RESULTS.md  main.c  vcpkg.json.in
corpus_b/: mosquitto_sbom.json
docs/: BENCHMARK_HIBRIDO_FINAL.md  BENCHMARK_METHODOLOGY.md  ground_truth.csv  ground_truth_phase3_effective.csv  metrics_final.json  tool_execution_times.json
scripts/: compute_all_metrics.py  fetch_dtrack_results.sh  gen_sbom_from_vcpkg.py  run_all_phases.sh  run_phase1_simple.sh  run_phase2.sh  run_phase3.sh  run_phase3_emba.sh  run_snyk_contiki.sh  setup.sh
